// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonalityDetails renders component 1`] = `
<div
  className="details"
>
  <div
    className="complements"
  >
    <h4>
      complements
    </h4>
    <p>
      You often find yourself working with other Naturalists as you try to work outdoors as much as possible and find your like-minded colleagues alongside you.  You also enjoy working with other Analyzers whose shared cerebral interests find you having many things in common. You appreciate your Planner colleagues as well.  They take care of managing the details so you can think through the big picture of a project and then get started on it right away.

    </p>
  </div>
  <div
    className="conflicts"
  >
    <h4>
      conflicts
    </h4>
    <p>
      You are versatile because while you have your own work preferences, you work well with all types of people.  You appreciate the leadership of Visionaries and the helping hand a Mentor is always willing to provide.  However, you may find it challenging to share a workspace with your Inventor colleagues.  Their creative process can often lead to a chaotic work process and environment, which doesn't always jive with your thoughtful yet reserved approach.
    </p>
  </div>
  <div
    className="environments"
  >
    <h4>
      best_work_environments
    </h4>
    <ul>
      <li>
        Encourages investigation
      </li>
      <li>
        Has a strong mission
      </li>
      <li>
        Incorporates the natural environment
      </li>
      <li>
        Promotes independence
      </li>
    </ul>
  </div>
</div>
`;

exports[`PersonalityDetails renders nothing if no details 1`] = `null`;

exports[`PersonalityDetails renders nothing if not ready 1`] = `null`;

exports[`PersonalityDetails renders top personality if no blend 1`] = `
<div
  className="details"
>
  <div
    className="environments"
  >
    <h4>
      best_work_environments
    </h4>
    <ul>
      <li>
        Allows for both independent work and teamwork
      </li>
      <li>
        Allows for independent study and peer collaboration
      </li>
      <li>
        Has a strong mission
      </li>
      <li>
        Incorporates the natural environment
      </li>
      <li>
        Incorporates work with like-minded colleagues
      </li>
      <li>
        Is fueled by a strong mission
      </li>
      <li>
        Nurtures collaborations with others who share the same mission
      </li>
      <li>
        Offers a combination of autonomy and teamwork
      </li>
    </ul>
  </div>
</div>
`;

exports[`PersonalityDetails skips environments section if no environments 1`] = `
<div
  className="details"
>
  <div
    className="complements"
  >
    <h4>
      complements
    </h4>
    <p>
      You often find yourself working with other Naturalists as you try to work outdoors as much as possible and find your like-minded colleagues alongside you.  You also enjoy working with other Analyzers whose shared cerebral interests find you having many things in common. You appreciate your Planner colleagues as well.  They take care of managing the details so you can think through the big picture of a project and then get started on it right away.

    </p>
  </div>
  <div
    className="conflicts"
  >
    <h4>
      conflicts
    </h4>
    <p>
      You are versatile because while you have your own work preferences, you work well with all types of people.  You appreciate the leadership of Visionaries and the helping hand a Mentor is always willing to provide.  However, you may find it challenging to share a workspace with your Inventor colleagues.  Their creative process can often lead to a chaotic work process and environment, which doesn't always jive with your thoughtful yet reserved approach.
    </p>
  </div>
</div>
`;

exports[`PersonalityDetails skips section if no detail 1`] = `
<div
  className="details"
>
  <div
    className="environments"
  >
    <h4>
      best_work_environments
    </h4>
    <ul>
      <li>
        Encourages investigation
      </li>
      <li>
        Has a strong mission
      </li>
      <li>
        Incorporates the natural environment
      </li>
      <li>
        Promotes independence
      </li>
    </ul>
  </div>
</div>
`;
